styles/style.css
/* ... */
section.component3 div.cons {
    width: 270px;
    height: 210px;
    border: 1px solid #DBE7EF;
    display: inline-block;
    position: relative;
    margin-right: 30px;
    margin-top: 126px;
    margin-bottom: 100px;
    text-align: center;
}

section.component3 div.cons:last-child {
    margin-right: 0;
}

section.component3 div.cons h1 {
    color: #2C3E50;
    font-size: 18px;
    line-height: 19px;
    margin-top: 52px;
    margin-bottom: 10px;
}

section.component3 div.cons p {
    color: #A1B1BC;
    font-size: 14px;
    line-height: 24px;
    padding: 0 33px;
}

section.component3 div.cons div.outer {
    height: 60px;
    width: 60px;
    border-radius: 50%;
    border: 1px solid #DBE7EF;
    background: #FFFFFF;
    position: absolute;
    top: -31px;
    left: 105px;
}

section.component3 div.cons div.inner {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    border: 1px solid #DBE7EF;
    background: #FFFFFF;
    position: absolute;
    top: -26px;
    left: 110px;
    display: flex;
    justify-content: center;
    align-items: center;
}

section.component3 div.cons div.inner i {
    color: #A1B1BC;
    font-size: 20px;
}

/* Section four */

section.component4 {
    width: 100%;
    background: #ECF0F1;
    padding-top: 89px;
    padding-left: 374px;
    padding-bottom: 110px;
}

section.component4 img {
    float: right;
    margin-right: 369px;
    margin-top: 37px;
}

section.component4 h1 {
    font-weight: 300;
    font-size: 36px;
    line-height: 48px;
    color: #2C3E50;
    margin-bottom: 13px;
}

section.component4 p {
    width: 570px;
    font-size: 14px;
    line-height: 24px;
    color: #A1B1BC;
    margin-bottom: 32px;
}

section.component4 a {
    padding: 15px 39px;
    font-weight: 900;
    color: #34495E;
    font-size: 16px;
    line-height: 40px;
    text-transform: uppercase;
    background: #FFFFFF;
    border: 1px solid #E5E5E5;
    border-radius: 3px;
}

/* Section five */

section.component5 {
    width: 100%;
    background: #2E3241;
    color: #FFFFFF;
    text-align: center;
    padding-top: 89px;
    padding-bottom: 116px;
}

section.component5 p {
    font-size: 14px;
    line-height: 24px;
}

section.component5 header {
    padding: 0 630px;
    margin-bottom: 56px;
}

section.component5 header h1 {
    font-size: 36px;
    line-height: 48px;
    font-weight: 300;
    margin-bottom: 10px;
}

section.component5 div.content {
    display: flex;
    justify-content: center;
}

section.component5 div.content div.percentage {
    width: 270px;
    margin-right: 30px;
}

section.component5 div.content div.percentage > h1 {
    font-size: 18px;
    line-height: 40px;
    margin-top: 17px;
    margin-bottom: 5px;
}

section.component5 div.content div.percentage > p {
    padding: 0 4px;
}

section.component5 div.content div.percentage > .circle1, .circle2, .circle3, .circle4 {
    color: #4E4E4E;
}

div.circle1 p {
    font-size: 18px;
    line-height: 20px;
    margin-left: -1px;
    margin-top: -3px;
}

div.circle2 p {
    font-size: 18px;
    line-height: 20px;
    margin-left: -1px;
    margin-top: -3px;
}

div.circle3 p {
    font-size: 18px;
    line-height: 20px;
    margin-left: -1px;
    margin-top: -3px;
}

div.circle4 p {
    font-size: 18px;
    line-height: 20px;
    margin-left: -1px;
    margin-top: -3px;
}

section.component5 div.content div.percentage:last-child {
    margin-right: 0;
}

section.component5 div.content div.percentage div.circle1 {
    background: #1ABC9C;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    margin: auto;
    padding: 6px;
}

section.component5 div.content div.percentage div.circle1 > div {
    background: #FFFFFF;
    height: 188px;
    width: 188px;
    border-radius: 50%;
    padding: 42px;
}

section.component5 div.content div.percentage div.circle1 div > div {
    background: #ECF0F1;
    height: 104px;
    width: 104px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

section.component5 div.content div.percentage div.circle2 {
    background: #21C2F8;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    margin: auto;
    padding: 6px;
}

section.component5 div.content div.percentage div.circle2 p {
    color: #FFFFFF;
}

section.component5 div.content div.percentage div.circle2 > div {
    background: #FFFFFF;
    height: 188px;
    width: 188px;
    border-radius: 50%;
    padding: 42px;
}

section.component5 div.content div.percentage div.circle2 div > div {
    background: #2C3E50;
    height: 104px;
    width: 104px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

section.component5 div.content div.percentage div.circle3 {
    background: #1ABC9C;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    margin: auto;
    padding: 6px;
}

section.component5 div.content div.percentage div.circle3 > div {
    background: #FFFFFF;
    height: 188px;
    width: 188px;
    border-radius: 50%;
    padding: 42px;
}

section.component5 div.content div.percentage div.circle3 div > div {
    background: #ECF0F1;
    height: 104px;
    width: 104px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

section.component5 div.content div.percentage div.circle4 {
    background: #1ABC9C;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    margin: auto;
    padding: 6px;
}

section.component5 div.content div.percentage div.circle4 > div {
    background: #FFFFFF;
    height: 188px;
    width: 188px;
    border-radius: 50%;
    padding: 42px;
}

section.component5 div.content div.percentage div.circle4 div > div {
    background: #ECF0F1;
    height: 104px;
    width: 104px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Section six */

section.component6 {
    width: 100%;
    padding-top: 89px;
    text-align: center;
}
/* ... */

